[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "mlipops"
version = "0.5.0"
dependencies = ["torch"]
authors = [{name = "Peter Eastman"}]
description = "PyTorch operations for use in creating machine learning interatomic potentials"
license = "MIT"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: GPU",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Topic :: Software Development :: Libraries"
]

[project.urls]
Repository = "https://github.com/peastman/mlipops"